Added menu item

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li>Products</li>
             <li>Services</li>
             <li>Contact</li>
+            <li>Privacy Policy</li>
         </ul>
 </body>
 </html>
